# alpinegear-pulse

./: .gitignore  README.md
.github/workflows/: daily-sync.yml
data/: snapshot.json
data/seed/: ad_spend_seed.csv  orders_seed.py  setup_sheets.py
sync/: kpis.py  matcher.py  normalize.py  pyproject.toml  sheets_client.py  snapshot.py  sync.py
sync/tests/: test_kpis.py  test_matcher.py  test_normalize.py
web/: package-lock.json  package.json
web/app/: DashboardClient.tsx  globals.css  layout.tsx  page.tsx
web/app/_lib/: getSnapshot.ts
web/app/qa/: page.tsx
web/components/: DateRangePicker.tsx  KpiTile.tsx  Nav.tsx  NewBadge.tsx  ProductPills.tsx  ProductTable.tsx  RevenueByProductChart.tsx  RevenueOverTimeChart.tsx
web/lib/: filters.ts  format.ts  snapshot.ts  types.ts
web/public/: snapshot.json
