[project]
name = "alpinegear-pulse-sync"
version = "0.1.0"
description = "Daily sync from Google Sheets to dashboard snapshot.json"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["normalize", "matcher", "kpis", "sheets_client", "snapshot", "sync"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
